--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/material-bottom-tabs": "^6.2.29",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.2.10",
+    "@reduxjs/toolkit": "^2.7.0",
     "expo": "~52.0.46",
     "expo-status-bar": "~2.0.1",
     "prop-types": "^15.8.1",
@@ -26,6 +28,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
+    "react-redux": "^9.2.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
