--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^7.2.10",
     "@reduxjs/toolkit": "^2.7.0",
     "expo": "~52.0.46",
+    "expo-dev-client": "~5.0.20",
     "expo-status-bar": "~2.0.1",
     "prop-types": "^15.8.1",
     "react": "18.3.1",
@@ -25,6 +26,7 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.13.4",
+    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-vector-icons": "^10.2.0",
