--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-firebase/app": "^22.0.0",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/material-bottom-tabs": "^6.2.29",
     "@react-navigation/native": "^7.1.6",
